--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.3",
-    "@astrojs/tailwind": "^5.1.0",
-    "@fontsource-variable/onest": "^5.0.4",
-    "astro": "^4.14.5",
-    "tailwindcss": "^3.4.7",
-    "typescript": "^5.5.4"
+    "@astrojs/check": "0.9.3",
+    "@astrojs/tailwind": "5.1.0",
+    "@fontsource-variable/onest": "5.0.4",
+    "astro": "4.14.5",
+    "tailwindcss": "3.4.7",
+    "typescript": "5.5.4"
   }
 }
