--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "0.9.3",
-    "@astrojs/tailwind": "5.1.0",
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/tailwind": "^6.0.2",
     "@fontsource-variable/onest": "5.0.4",
-    "astro": "4.14.5",
+    "astro": "^5.7.13",
     "tailwindcss": "3.4.7",
     "typescript": "5.5.4"
   }
